[gd_scene load_steps=8 format=3 uid="uid://btqw5g0uc7uoj"]

[ext_resource type="Script" uid="uid://b6unsth04y8ge" path="res://ui/player_ui.gd" id="1_fkyhh"]
[ext_resource type="PackedScene" uid="uid://bsqeyvuirahij" path="res://systems/leveling/level_up_label.tscn" id="2_aj138"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_fkyhh"]
load_path = "res://.godot/imported/rect-white-512x512.png-8d13ddf54f6ead8ca533f36a78476a1d.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_aj138"]
atlas = SubResource("CompressedTexture2D_fkyhh")
region = Rect2(0, 0, 128, 24)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_1lmo7"]
load_path = "res://.godot/imported/rect-white-512x512.png-8d13ddf54f6ead8ca533f36a78476a1d.ctex"

[sub_resource type="AtlasTexture" id="AtlasTexture_ps2g2"]
atlas = SubResource("CompressedTexture2D_1lmo7")
region = Rect2(0, 0, 128, 24)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fkyhh"]
size = Vector2(64, 64)

[node name="PlayerUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_fkyhh")

[node name="TopRight" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0

[node name="VBoxContainer" type="VBoxContainer" parent="TopRight"]
layout_mode = 2

[node name="HealthBarContainer" type="HBoxContainer" parent="TopRight/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="TopRight/VBoxContainer/HealthBarContainer"]
layout_mode = 2
text = "HP"

[node name="HealthBar" type="TextureProgressBar" parent="TopRight/VBoxContainer/HealthBarContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_under = SubResource("AtlasTexture_aj138")
texture_progress = SubResource("AtlasTexture_ps2g2")
tint_progress = Color(0.39215687, 0, 0, 1)

[node name="LChargeBarContainer" type="HBoxContainer" parent="TopRight/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="TopRight/VBoxContainer/LChargeBarContainer"]
layout_mode = 2
text = "WC"

[node name="LChargeBar" type="TextureProgressBar" parent="TopRight/VBoxContainer/LChargeBarContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_under = SubResource("AtlasTexture_aj138")
texture_progress = SubResource("AtlasTexture_ps2g2")
tint_progress = Color(0.12548819, 0.28840253, 0.49477583, 1)

[node name="RChargeBarContainer" type="HBoxContainer" parent="TopRight/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="TopRight/VBoxContainer/RChargeBarContainer"]
layout_mode = 2
text = "WC"

[node name="RChargeBar" type="TextureProgressBar" parent="TopRight/VBoxContainer/RChargeBarContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_under = SubResource("AtlasTexture_aj138")
texture_progress = SubResource("AtlasTexture_ps2g2")
tint_progress = Color(0.12548819, 0.28840253, 0.49477583, 1)

[node name="LevelContainer" type="HBoxContainer" parent="TopRight/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="LevelProgressLabel" type="Label" parent="TopRight/VBoxContainer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "LVL 1"

[node name="LevelProgressBar" type="TextureProgressBar" parent="TopRight/VBoxContainer/LevelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture_under = SubResource("AtlasTexture_aj138")
texture_progress = SubResource("AtlasTexture_ps2g2")
tint_progress = Color(0.3611138, 0.27569452, 0.014137445, 1)

[node name="BottomCenter" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="ThrowableItemsContainer" type="HBoxContainer" parent="BottomCenter"]
unique_name_in_owner = true
layout_mode = 2

[node name="LeftThrowableItem" type="VBoxContainer" parent="BottomCenter/ThrowableItemsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="BottomCenter/ThrowableItemsContainer/LeftThrowableItem"]
layout_mode = 2
text = "Q"

[node name="CountLabel" type="Label" parent="BottomCenter/ThrowableItemsContainer/LeftThrowableItem"]
layout_mode = 2
text = "0"

[node name="TextureRect" type="TextureRect" parent="BottomCenter/ThrowableItemsContainer/LeftThrowableItem"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_fkyhh")
expand_mode = 1

[node name="RightThrowableItem" type="VBoxContainer" parent="BottomCenter/ThrowableItemsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label" type="Label" parent="BottomCenter/ThrowableItemsContainer/RightThrowableItem"]
layout_mode = 2
text = "E"

[node name="CountLabel" type="Label" parent="BottomCenter/ThrowableItemsContainer/RightThrowableItem"]
layout_mode = 2
text = "0"

[node name="TextureRect" type="TextureRect" parent="BottomCenter/ThrowableItemsContainer/RightThrowableItem"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_fkyhh")
expand_mode = 1

[node name="LeftLabelsStack" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 347.0
offset_bottom = 358.0

[node name="LevelUpLabel" parent="LeftLabelsStack" node_paths=PackedStringArray("player_ui") instance=ExtResource("2_aj138")]
layout_mode = 2
player_ui = NodePath("../..")
